[tool.poetry]
name = "llm-server"
version = "0.1.0"
description = ""
authors = ["Sanjay Venkat <sanjayvenkat2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
authlib = "^1.5.2"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"
uvicorn = "^0.34.0"
dotenv = "^0.9.9"
pyjwt = "^2.10.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
